--- a/src/Makefile
+++ b/src/Makefile
@@ -9,17 +9,17 @@ LDFLAGS = -lrt -pthread
 SOURCES = PONG.c game.c gameGraphics.c mzapo_phys.c mzapo_parlcd.c
 #SOURCES += font_prop14x16.c font_rom8x16.c
 TARGET_EXE = output.o
-TARGET_IP ?= 192.168.202.211
+TARGET_IP ?= 10.0.0.46
 ifeq ($(TARGET_IP)$(filter run,$(MAKECMDGOALS)),run)
 $(warning The target IP address is not set)
 $(warning Run as "TARGET_IP=192.168.202.xxx make run" or modify Makefile)
-TARGET_IP ?= 192.168.202.211
+TARGET_IP ?= 10.0.0.46
 endif
 TARGET_DIR ?= /tmp/$(shell whoami)
 TARGET_USER ?= root
 # for use from Eduroam network use TARGET_IP=localhost and enable next line
 #SSH_OPTIONS=-o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" -o "Port=2222"
-SSH_OPTIONS=-i /opt/zynq/ssh-connect/mzapo-root-key
+SSH_OPTIONS=-i ~/mzapo-root-key
 
 OBJECTS += $(filter %.o,$(SOURCES:%.c=%.o))
 OBJECTS += $(filter %.o,$(SOURCES:%.cpp=%.o))
